--- a/inst/explore/README.html
+++ b/inst/explore/README.html
@@ -23,7 +23,7 @@ Raftery et al. (2012, 2014), see <a href='http://bayespop.csss.washington.edu'>o
 
 
 <h3>Note</h3>
-The wppExplorer can be also downloaded from <a href="https://cran.r-project.org">CRAN</a> as a standalone R package. It can be used for example to access values that are underlying the various visualizations. 
+The wppExplorer can be either viewed <a href="https://rstudio.stat.washington.edu/shiny/wppExplorer/inst/explore/">online</a> or installed from <a href="https://cran.r-project.org">CRAN</a> as a standalone R package. The standalone version can be used for example to access values that are underlying the various visualizations. 
 
 
 <h3>Maintainer</h3>
