--- a/inst/explore/README.html
+++ b/inst/explore/README.html
@@ -45,7 +45,7 @@ The wppExplorer can be either viewed <a href="https://rstudio.stat.washington.ed
 
 
 
-<hr /><div style="text-align: center;">[Package <em>wppExplorer</em> version 1.8-0]</div>
+<hr /><div style="text-align: center;">[Package <em>wppExplorer</em> version 1.8-0, 4/15/2016]</div>
 </body>
 </html>
 
