--- a/inst/explore/README.html
+++ b/inst/explore/README.html
@@ -21,12 +21,15 @@ United Nations, Department of Economic and Social Affairs, Population Division.<
 <p>There is a time and indicator selection on the left, and various forms of visualization on the right.
 The time slider in the left pane defines the year or time period for which data are shown. Note that for vital rate indicators, such as fertility, mortality, migration and sex ratio at birth, the time shown on the slider is the end year of the time period of the data shown in the right pane.
 </p>
-<p>The uncertainty selection is only used for indicators and years for which the corresponding lower and upper bounds are available, and for the appropriate visualization types. These are country plots that appear after clicking on the map, table in the &ldquo;Sortable Data&rdquo; tab, and &ldquo;Trends&rdquo; and &ldquo;Pyramids&rdquo;. In <span class="pkg">wpp2015</span>, the 80 and 95% intervals are available for the fertility, life expectancy and total population indicators; The +-1/2child intervals are available for the fertility and population indicators. 
+<p>The uncertainty selection is only used for indicators and years for which the corresponding lower and upper bounds are available, and for the appropriate visualization types. These are country plots that appear after clicking on the map
+<!--, table in the &ldquo;Sortable Data&rdquo; tab,-->
+and &ldquo;Trends&rdquo; and &ldquo;Pyramids&rdquo;. In the latest WPP revision, the 80 and 95% intervals are available for the fertility, life expectancy and total population indicators; The +-1/2child intervals are available for the fertility and population indicators. 
 </p>
 <p>The "Trends & Pyramids" tab can be used to compare indicators by countries. Selection of multiple countries is supported. The countries are sorted alphabetically. Various aggregated regions can be found at the end of the list. Thus countries can be compared to regional agregates in the same graph. 
 </p>
 <p>The ggplot-based graphs in the Trends and Pyramids sub-tabs are interactive. One can see the data values by mouse hovering or single clicks. One can zoom in by selecting a region of the graph. Zooming out is done by a double click.</p>
-<p>Values in the "Trends" plots as well as in the table below correspond to the indicator selected on the left. The values in the "Age Profiles" and "Pyramids" graphs correspond to the sex-  and age-specific version of the selected indicator. For example, if "Total Population" is selected in the left panel, the "Age Profiles" and "Pyramids" graphs show population by sex and age, while the table below shows values of the total population.
+<p>Values in the "Trends" plots <!--as well as in the table below-->
+correspond to the indicator selected on the left. The values in the "Age Profiles" and "Pyramids" graphs correspond to the sex-  and age-specific version of the selected indicator. For example, if "Total Population" is selected in the left panel, the "Age Profiles" and "Pyramids" graphs show population by sex and age. <!--, while the table below shows values of the total population.-->
 </p>
 
 <p>The Rosling Chart is based on <a href="https://en.wikipedia.org/wiki/Hans_Rosling" target="_blank">Hans Rosling's</a> <a href="http://www.gapminder.org/world/"  target="_blank">gapminder</a>. After opening the tab, the x and y axes are preloaded with the first three indicators from the left panel. You can add indicators to the axes by selecting it on the left and clicking the "Add Indicator" button in the right panel. Age-specific indicators can also be selected and added to the chart. The chart is created via the R package <span class="pkg">googleVis</span> which for the rendering requires an Internet connection and a Flash player. See the <span class="pkg">googleVis</span> documentation for more details.</p>
@@ -47,7 +50,7 @@ The time slider in the left pane defines the year or time period for which data 
 
 
 
-<hr /><div style="text-align: center;">[Package <em>wppExplorer</em> version 2.1-1, 08/18/2017]</div>
+<hr /><div style="text-align: center;">[Package <em>wppExplorer</em> version 2.2-0, 02/08/2018]</div>
 </body>
 </html>
 
