--- a/inst/explore/README.html
+++ b/inst/explore/README.html
@@ -31,14 +31,16 @@ The time slider in the left pane defines the year or time period for which data 
 <!--<p>The Rosling Chart is based on <a href="https://en.wikipedia.org/wiki/Hans_Rosling" target="_blank">Hans Rosling's</a> <a href="http://www.gapminder.org/world/"  target="_blank">gapminder</a>. After opening the tab, the x and y axes are preloaded with the first three indicators from the left panel. You can add indicators to the axes by selecting it on the left and clicking the "Add Indicator" button in the right panel. Age-specific indicators can also be selected and added to the chart. The chart is created via the R package <span class="pkg">googleVis</span> which for the rendering requires an Internet connection and a Flash player. See the <span class="pkg">googleVis</span> documentation for more details.</p>-->
 
 <h3>Note</h3>
-The wppExplorer can be either viewed <a href="https://bayespop.shinyapps.io/wpp2024explorer" target="_blank">online</a> or installed from <a href="https://cran.r-project.org" target="_blank">CRAN</a> as a standalone R package. The standalone version can be used for example to access values that are underlying the various visualizations. 
+The wppExplorer can be either viewed <a href="https://bayespop.shinyapps.io/wpp2024explorer" target="_blank">online</a> or installed from <a href="https://github.com/PPgp/wppExplorer" target="_blank">GitHub</a> as a standalone R package. The standalone version can be used for example to access values that are underlying the various visualizations. 
 
 
 <h3>Maintainer</h3>
-<p>Hana &#352;ev&#269;&#237;kov&#225;, Center for Statistics and the Social Sciences, University of Washington.</p>
+<p>Hana &#352;ev&#269;&#237;kov&#225;, Center for Studies in Demography & Ecology, University of Washington.</p>
 
 <h3>Acknowledgments</h3>
-<p>The idea and code of the basic layout was taken from one of Joe Cheng's examples presented at the useR Meetup in Seattle 2013. This website was produced by the <a href='http://bayespop.csss.washington.edu' target="_blank">BayesPop research group</a> at the University of Washington in collaboration with the United Nations Population Division, and we would like to thank all their staff, including Patrick Gerland for his thorough testing and useful comments and suggestions, and John Wilmoth for his support of the project. This work was supported by the Eunice Kennedy Shriver National Institute of Child Health and Human Development (NICHD), under grants numbers R01 HD054511 and R01 HD070936, and by the University of Washington.
+<p>The idea and code of the basic layout was taken from one of Joe Cheng's examples presented at the useR Meetup in Seattle 2013. This website was produced by the <a href='http://bayespop.csss.washington.edu' target="_blank">BayesPop research group</a> at the University of Washington in collaboration with the United Nations Population Division, and we would like to thank all their staff, including Patrick Gerland for his thorough testing and useful comments and suggestions, and John Wilmoth for his support of the project. This work was supported by the Eunice Kennedy Shriver National Institute of Child Health and Human Development (NICHD), under grants numbers R01 HD054511 and R01 HD070936, and by the University of Washington.</p>
+<p>
+More recently, this work has been supported by a NICHD research infrastructure grant, P2C HD042828, to the Center for Studies in Demography & Ecology at the University of Washington. The content is solely the responsibility of the authors and does not necessarily represent the official views of the National Institutes of Health.  Additional support for this research came from support to CSDE from the College of Arts & Sciences, the UW Provost, eSciences Institute, the Evans School of Public Policy & Governance, College of Built Environment, School of Public Health, the Foster School of Business, and the School of Social Work.
 </p>
 
 <h3>References</h3> 
@@ -49,7 +51,7 @@ The wppExplorer can be either viewed <a href="https://bayespop.shinyapps.io/wpp2
 
 
 
-<hr /><div style="text-align: center;">[Package <em>wppExplorer</em> version 3.0-1, 2/26/2025]</div>
+<hr /><div style="text-align: center;">[Package <em>wppExplorer</em> version 3.0-1, 2/27/2025]</div>
 </body>
 </html>
 
